Kubernetes/local/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uow-cca-groupt
  name: uow-cca-groupt
spec:
  replicas: 3
  selector:
    matchLabels:
      app: uow-cca-groupt
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: uow-cca-groupt
        version: v0.0.2
    spec:
      containers:
      - image: pasanbhanu/uow-cca-groupt
        name: uow-cca-groupt-12345
